# Veritasloop

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  GEMINI.md  OPTIMIZATION_DECISION_GUIDE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_VISUAL_SUMMARY.md  PLAN-CLAUDE.md  PLANNING.md  README.md  TASK-CLAUDE.md  TASK.md  app.py  launch_streamlit.bat  launch_streamlit.sh  launch_ui.bat  main.py  pyproject.toml  requirements.txt  test_tier1_optimizations.py  verify_tier1_structure.py  verify_tier2_structure.py
.claude/: settings.local.json
.gemini/: settings.json
api/: main.py  server_utils.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md  LOGGING.md  REACT_UI.md  STREAMLIT_GUIDE.md  USAGE.md
frontend/: .env.development  .env.example  .env.production  README.md  package-lock.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentNode.jsx  ConfigPanel.jsx  DebateStream.jsx  ErrorBoundary.jsx  ProgressTracker.jsx  VerdictReveal.jsx
frontend/src/styles/: variables.css
scripts/: analyze_logs.py
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py  contra_agent.py  judge_agent.py  pro_agent.py
src/config/: env_validator.py  personalities.py  settings.py
src/models/: __init__.py  schemas.py
src/orchestrator/: __init__.py  debate.py  graph.py
src/tools/: __init__.py  content_tools.py  news_api.py  reddit_api.py  search_tools.py
src/utils/: __init__.py  claim_extractor.py  logger.py  resource_pool.py  tool_manager.py
tests/: conftest.py  test_base_agent.py  test_claim_extractor.py  test_content_tools.py  test_contra_agent.py  test_full_pipeline.py  test_judge_agent.py  test_logger.py  test_news_api.py  test_placeholder.py  test_pro_agent.py  test_reddit_api.py  test_schemas.py  test_search_tools.py  test_security.py  test_streamlit_app.py  test_tool_manager.py  test_tracing.py
